Let's try FireFox on Travis

--- a/pom.xml
+++ b/pom.xml
@@ -36,13 +36,13 @@
         </dependency>
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
-            <artifactId>selenium-chrome-driver</artifactId>
+            <artifactId>selenium-firefox-driver</artifactId>
             <version>2.35.0</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
-            <artifactId>selenium-server</artifactId>
+            <artifactId>selenium-support</artifactId>
             <version>2.35.0</version>
             <scope>test</scope>
         </dependency>
