--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,7 @@ language: java
 script: mvn -q test
 jdk:
 - oraclejdk7
+
+before_install:
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
